# speak2

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile.runpod-allinone  README.md  env.example
.github/workflows/: docker-runpod-image.yml
compose/: docker-compose.runpod.inception-mercury.yml  docker-compose.runpod.single-gpu.yml  docker-compose.runpod.split-llm.yml
contrib/call-routing-core/: Cargo.toml
contrib/call-routing-core/src/: lib.rs
deploy/asterisk/: extensions_custom_fjord_parallel_test.conf.example
docs/: CALL_ROUTING_SPACETIME.md  VEXYL_PARALLEL_MODES.md  runpod-docs.md  runpod-testing.md
runpod/: entrypoint.sh  run-backend.sh  run-frontend.sh  run-stt.sh  run-tts.sh  supervisord.conf  traefik-dynamic.yaml  traefik-static.yaml
scripts/: docker-build-push-runpod.sh  runpod_unmute_rest.py  runpod_unmute_smoke.sh  seed_call_routing_demo.sh
